codama-macros/tests/codama_attribute/values_nodes/payer_value_node/with_input.fail.stderr
error: payer value does not accept any input
 --> tests/codama_attribute/values_nodes/payer_value_node/with_input.fail.rs:3:26
  |
3 | #[codama(default_value = payer(42))]
  |                          ^^^^^^^^^

error: payer value does not accept any input
 --> tests/codama_attribute/values_nodes/payer_value_node/with_input.fail.rs:6:26
  |
6 | #[codama(default_value = payer(banana))]
  |                          ^^^^^^^^^^^^^
